<resources>
    <string name="app_name">Camper Parking</string>

    <string name="hint_parkingTitle">Parking Title</string>
    <string name="hint_parkingDescription">Description</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="menu_addParking">Add</string>
    <string name="menu_deleteParking">Delete</string>
    <string name="menu_cancelParking">Cancel</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_profile">Profile</string>
    <string name="toast_enterTitle">Please enter a title</string>
    <string name="toast_enterUsername">Please enter username</string>
    <string name="toast_enterValidUserPassword">Please enter a valid username and password</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Change Image </string>
    <string name="button_location">Set Location</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="button_addParking">Add Parking</string>
    <string name="button_update">Update</string>


    <string name="select_parking_image">Select parking image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="toast_passwordNoMatch">Please, make sure the password matches</string>
    <string name="menu_back">Back</string>
    <string name="toast_userExist">User already exist</string>
    <string name="title_activity_parking_maps">ParkingMapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="parking_image_placeholder">Parking Image</string>
    <string name="parking_title_placeholder">Parking Title</string>
    <string name="parking_description_placeholder">Parking Description</string>
    <string name="menu_map">Map</string>
    <string name="menu_my_parkings">My Parkings</string>
    <string name="menu_all_parkings">All Parkings</string>


</resources>