<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_map"
        android:orderInCategory="70"
        android:title="@string/menu_map"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/item_add"
        android:orderInCategory="80"
        android:title="@string/menu_addParking"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/item_profile"
        android:orderInCategory="90"
        android:title="@string/menu_profile"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/item_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="collapseActionView" />
</menu>